--- a/sdk/custom/scenes/Game.yaml
+++ b/sdk/custom/scenes/Game.yaml
@@ -1,16 +1,12 @@
-# Copyright 2020 Google LLC
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#    http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
+conditionalEvents:
+- condition: scene.slots.status == "FINAL"
+  handler:
+    staticPrompt:
+      candidates:
+      - promptResponse:
+          firstSimple:
+            variants:
+            - speech: Final slots
 intentEvents:
 - handler:
     webhookHandler: change_color
@@ -31,4 +27,20 @@ intentEvents:
 - handler:
     webhookHandler: restart
   intent: restart
+  transitionToScene: Game
+- handler:
+    webhookHandler: input_yes
+  intent: input_yes
+  transitionToScene: Game
+- handler:
+    webhookHandler: confirm_task
+  intent: confirm_task
+  transitionToScene: Game
+- handler:
+    webhookHandler: survey_input
+  intent: survey_input
+  transitionToScene: Game
+- handler:
+    webhookHandler: start_survey
+  intent: start_survey
   transitionToScene: Game
