--- a/sdk/webhooks/ActionsOnGoogleFulfillment.yaml
+++ b/sdk/webhooks/ActionsOnGoogleFulfillment.yaml
@@ -1,23 +1,14 @@
-# Copyright 2020 Google LLC
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#    http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
 handlers:
 - name: welcome
 - name: instructions
 - name: restart
-- name: fallback
 - name: change_color
 - name: start_spin
 - name: stop_spin
+- name: input_yes
+- name: input_no
+- name: confirm_task
+- name: survey_input
+- name: start_survey
 inlineCloudFunction:
   executeFunction: ActionsOnGoogleFulfillment
