--- a/sdk/webhooks/ActionsOnGoogleFulfillment/package.json
+++ b/sdk/webhooks/ActionsOnGoogleFulfillment/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@assistant/conversation": "^3.0.0",
+    "actions-on-google": "^2.13.0",
     "firebase-admin": "~8.12.1",
     "firebase-functions": "^3.6.2"
   }
